# ScanSentry

./: .gitignore
Backend/: main.py  pyproject.toml
Frontend/src/: App.vue  style.css
