[project]
name = "scansentry"
version = "0.1.0"
description = "Lightweight FastAPI log service, SQLite persistence, reverse proxy real IP support, /show/me JSON API for log query and IP stats"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.45.0",
    "httpx>=0.28.0",
]

[[tool.uv.index]]
url = "https://mirrors.hust.edu.cn/pypi/web/simple"
default = true
